kubernetes/apps/wallabag/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wallabag
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "wallabag.k8s.local"
  rules:
    - backendRefs:
        - name: wallabag
          port: 80
